force-app/main/default/objects/Anken__c/Anken__c.object-meta.xml
<CustomObject>
    <description>案件</description>
    <label>案件</label>
    <nameField>
        <label>案件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>