force-app/main/default/objects/Anken__c/fields/Address_B__c.field-meta.xml
<CustomField>
    <fullName>Address_B__c</fullName>
    <label>所在地（市）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>豊島区</fullName>
            </value>
            <value>
                <fullName>中野区</fullName>
            </value>
            <value>
                <fullName>練馬区</fullName>
            </value>
            <value>
                <fullName>文京区</fullName>
            </value>
            <value>
                <fullName>港区</fullName>
            </value>
            <value>
                <fullName>目黒区</fullName>
            </value>
            <value>
                <fullName>横浜市</fullName>
            </value>
            <value>
                <fullName>川崎市</fullName>
            </value>
            <value>
                <fullName>千葉市</fullName>
            </value>
            <value>
                <fullName>船橋市</fullName>
            </value>
            <value>
                <fullName>川口市</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>