force-app/main/default/objects/Anken__c/fields/AnkenKanriID__c.field-meta.xml
<CustomField>
    <fullName>AnkenKanriID__c</fullName>
    <label>案件管理ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>