force-app/main/default/objects/Anken__c/fields/AnkenSyubetu__c.field-meta.xml
<CustomField>
    <fullName>AnkenSyubetu__c</fullName>
    <label>案件開発種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>修正</fullName>
            </value>
            <value>
                <fullName>保守</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>