force-app/main/default/objects/Anken__c/fields/BukenImage__c.field-meta.xml
<CustomField>
    <fullName>BukenImage__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F00000175SF&quot;,  &quot;Flower&quot;, 300, 300)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件画像</label>
    <type>Text</type>
</CustomField>