force-app/main/default/objects/Anken__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>完了予定日</label>
    <type>Date</type>
</CustomField>