force-app/main/default/objects/Anken__c/fields/IsMyAnken__c.field-meta.xml
<CustomField>
    <fullName>IsMyAnken__c</fullName>
    <formula>IF( $User.Id = OwnerId ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自分案件</label>
    <type>Checkbox</type>
</CustomField>