force-app/main/default/objects/Anken__c/fields/ItakuComp__c.field-meta.xml
<CustomField>
    <fullName>ItakuComp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>委託業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>ankenItoku</relationshipName>
    <type>Lookup</type>
</CustomField>