force-app/main/default/objects/Anken__c/fields/KaishiActDate__c.field-meta.xml
<CustomField>
    <fullName>KaishiActDate__c</fullName>
    <label>開始日</label>
    <type>Date</type>
</CustomField>