force-app/main/default/objects/Anken__c/fields/Kannryoukigen__c.field-meta.xml
<CustomField>
    <fullName>Kannryoukigen__c</fullName>
    <formula>Text(CloseDate__c -TODAY())&amp;&quot;日&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>完了期限</label>
    <type>Text</type>
</CustomField>