force-app/main/default/objects/Anken__c/fields/KanryoActDate__c.field-meta.xml
<CustomField>
    <fullName>KanryoActDate__c</fullName>
    <label>完了日</label>
    <type>Date</type>
</CustomField>