force-app/main/default/objects/Anken__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>郵便番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>