force-app/main/default/objects/Anken__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>商談中</fullName>
            </value>
            <value>
                <fullName>契約済</fullName>
            </value>
            <value>
                <fullName>クローズ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>