force-app/main/default/objects/Anken__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>案件種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不動産案件</fullName>
            </value>
            <value>
                <fullName>IT開発案件</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>